feat: evolve skill vfx direct authoring